--- a/find-team-mates/src/app/login/login.component.html
+++ b/find-team-mates/src/app/login/login.component.html
@@ -1,7 +1,7 @@
-
+<h1 class="alert-info">{{message}}</h1>
 <div class="container">
     <div class="row">
-        <div class="col-md-12 min-vh-100 d-flex flex-column justify-content-center">
+        <div class="col-md-12 min-vh-70 d-flex flex-column justify-content-center">
             <div class="row">
                 <div class="col-lg-6 col-md-8 mx-auto">
 
