--- a/find-team-mates/src/app/dialog-join-group/dialog-join-group.component.html
+++ b/find-team-mates/src/app/dialog-join-group/dialog-join-group.component.html
@@ -3,7 +3,7 @@
   <p>Write something....</p>
   <mat-form-field>
     <mat-label>Why do want to join the team?</mat-label>
-    <input matInput [(ngModel)]="data.animal" required>
+    <textarea style="width: 100%;" matInput [(ngModel)]="data.animal" required></textarea>
   </mat-form-field>
 </div>
 <div mat-dialog-actions>
