--- a/find-team-mates/src/app/create-project/create-project.component.css
+++ b/find-team-mates/src/app/create-project/create-project.component.css
@@ -9,3 +9,20 @@ hr {
   .example-form-field {
     width: 200px;
   }
+
+.card{
+ 
+  border: 3px solid #A770EF;
+}
+
+.card-header
+{
+text-align: center;
+background-color: #A770EF;
+}
+
+.header-style
+{
+color: white;
+font-weight:400;
+}
