--- a/find-team-mates/src/app/create-project/create-project.component.html
+++ b/find-team-mates/src/app/create-project/create-project.component.html
@@ -1,13 +1,14 @@
 <div class="container">
+  <h1>{{messageData}}</h1>
   <div class="row">
     <div class="col-md-12 d-flex flex-column justify-content-center">
       <div class="row">
         <div class="col-lg-6 col-md-8 mx-auto">
 
           <!-- form card Registration -->
-          <div class="card rounded shadow shadow-sm ">
+          <div class="card">
             <div class="card-header">
-              <h3 class="mb-0 text-center">Create Your Project</h3>
+              <h3 class="header-style mb-0">Create Your Project</h3>
             </div>
             <div class="card-body">
 
