--- a/find-team-mates/src/app/project-detail-with-user-info/project-detail-with-user-info.component.html
+++ b/find-team-mates/src/app/project-detail-with-user-info/project-detail-with-user-info.component.html
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="col-lg-4 col-md-5 xs-margin-30px-bottom">
                 <div class="team-single-img" style="text-align: center;">
-                    <img [src]=user_data[0].image alt="" width="250" height="250">
+                    <img [src]=user_data[0].image alt="" width="250" height="250" style="max-height: 400px;">
                 </div>
                 <div class="bg-light-gray padding-30px-all md-padding-25px-all sm-padding-20px-all">
                     <div class="text-center">
