--- a/find-team-mates/src/app/register/register.component.html
+++ b/find-team-mates/src/app/register/register.component.html
@@ -7,6 +7,7 @@
           <!-- form card Registration -->
           <div class="card rounded shadow shadow-sm">
             <div class="card-header">
+              <h2 class="alert-primary">{{messageData}}</h2>
               <h3 class="mb-0">Registration Form</h3>
             </div>
             <div class="card-body">
