--- a/find-team-mates/src/app/header/header.component.html
+++ b/find-team-mates/src/app/header/header.component.html
@@ -1,19 +1,41 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Team mate </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/login">Login</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink='/register'>Register</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+  <a class="navbar-brand" href="#">Team mate </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+    aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul *ngIf="!isloggedin" class="navbar-nav ml-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only"></span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/login">Login</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink='/register'>Register</a>
+      </li>
+    </ul>
+
+    <ul *ngIf="isloggedin" class="navbar-nav ml-auto" style="margin-right: 15px;">
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="/allProjects">View Projects <span class="sr-only"></span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink='/project'>Create new project</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle nav-link nav-link-menu" id="navbarDropdownMenuLink" data-toggle="dropdown">
+          Manage Projects
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" routerLink="/projectById" routerLinkActive="nav-active">View Your Projects</a>
+          <a class="dropdown-item" routerLink="/request" routerLinkActive="nav-active">View pending request</a>
+        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink='/updateProfile'>Profile</a>
+      </li>
+    </ul>
+  </div>
+</nav>
