--- a/find-team-mates/src/app/create-project/create-project.component.html
+++ b/find-team-mates/src/app/create-project/create-project.component.html
@@ -8,7 +8,7 @@
           <!-- form card Registration -->
           <div class="card">
             <div class="card-header">
-              <h3 class="header-style mb-0">Create Your Project</h3>
+              <h3 class="title header-style mb-0">Create Your Project</h3>
             </div>
             <div class="card-body">
 
@@ -88,7 +88,7 @@
                     </mat-form-field>
                   </div>
                 </div>
-                <button class="btn-lg btn-block" mat-raised-button color="primary" [disabled]="!projectForm.valid"
+                <button class="btn btn-block"  [disabled]="!projectForm.valid"
                   (click)="submit()">Submit</button>
 
               </form>
