--- a/find-team-mates/src/app/create-project/create-project.component.css
+++ b/find-team-mates/src/app/create-project/create-project.component.css
@@ -12,17 +12,45 @@ hr {
 
 .card{
  
-  border: 3px solid #A770EF;
+  border: 1px solid #2E4053;
 }
 
+.card-header{
+  background-color:#2471A3 ;
+}
+.title{
+  text-align: center;
+  color: #F7F9F9;
+  background-color:#2471A3 ;
+  font-weight: 400;
+  font-size: 23px !important;
+}
 .card-header
 {
 text-align: center;
-background-color: #A770EF;
+
 }
 
-.header-style
-{
-color: white;
-font-weight:400;
+
+.btn{
+	background-color: #2E4053;
+	color: #F7F9F9;
+	text-decoration: none;
+	border: 0px;	
 }
+
+
+.btn:hover{
+	color: #f7f9f9cb;
+}
+.btn:active:focus
+{
+	border-color: #F7F9F9;
+	background-color: #2E4053;;
+}
+.btn:disabled,
+button[disabled]{
+  background-color: #2E4053;
+  cursor: not-allowed;
+}
+
