--- a/find-team-mates/src/app/header/header.component.html
+++ b/find-team-mates/src/app/header/header.component.html
@@ -1,16 +1,13 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Team mate </a>
+<nav class="navbar navbar-expand-lg navbar-dark">
+  <a class="navbar-brand" href="#">Find Team Mates </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
     aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
+    <span class="navbar-toggler-icon" ></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul *ngIf="!isloggedin" class="navbar-nav ml-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only"></span></a>
-      </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/login">Login</a>
+        <a style="color: #F7F9F9;" class="nav-link" routerLink="/login">Login</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink='/register'>Register</a>
@@ -35,6 +32,9 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink='/updateProfile'>Profile</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" (click)="logout()">Logout</a>
       </li>
     </ul>
   </div>
