--- a/find-team-mates/src/app/login/login.component.html
+++ b/find-team-mates/src/app/login/login.component.html
@@ -8,23 +8,32 @@
                     <!-- form card login -->
                     <div class="card rounded shadow shadow-sm">
                         <div class="card-header">
-                            <h3 class="mb-0">Login</h3>
+                            <h1 class="title mb-0">Login</h1>
                         </div>
                         <div class="card-body"  >
-                            <h1 class="alert-info">{{message}}</h1>
+                            <h1 *ngIf="message" class="alert alert-info">{{message}}</h1>
                             <form class="form" role="form"  id="formLogin" #userForm="ngForm" >
                                 <div class="form-group">
                                     <label for="uname1">Email Id</label>
-                                    <input type="text" required class="form-control form-control-lg rounded-0"  [(ngModel)]="email" type="text" name="email" placeholder="Enter a valid email address">
+                                    <input type="email" required class="form-control form-control-lg rounded-0"
+                                      [(ngModel)]="email" 
+                                      type="text" 
+                                      name="email" 
+                                     
+                                     
+                                      required 
+                                      placeholder="Enter a valid email address">
                                    
                                 </div>
                                 <div class="form-group">
                                     <label>Password</label>
-                                    <input type="password" required class="form-control form-control-lg rounded-0"  [(ngModel)]="password" type="password" name="password" placeholder="Enter password">
+                                    <input type="password" required class="form-control form-control-lg rounded-0"  [(ngModel)]="password" type="password" required name="password" placeholder="Enter password">
                                   
                                 </div>
-                               
+                                <div style="display: flex;justify-content: space-between;">
+                               <a style="margin-top: 10px;" href="/register">Not Registered?</a>
                                 <button type="submit" (click)="login()" class="btn btn-success btn-lg float-right" id="btnLogin">Login</button>
+                            </div>
                             </form>
                         </div>
                         <!--/card-block-->
