--- a/find-team-mates/src/app/project-detail-with-user-info/project-detail-with-user-info.component.html
+++ b/find-team-mates/src/app/project-detail-with-user-info/project-detail-with-user-info.component.html
@@ -1,24 +1,28 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
     integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
-<div class="container">
+<div class="container mt-4">
     <div class="team-single">
         <div class="row">
-            <div class="col-lg-4 col-md-5 xs-margin-30px-bottom">
+            <div class="profile col-lg-4 col-md-5 xs-margin-30px-bottom">
                 <div class="team-single-img" style="text-align: center;">
-                    <img [src]=user_data[0].image alt="" width="250" height="250" style="max-height: 400px;">
+                    <h5 class="m-0 p-0 mt-2 mb-2">Project creator's Info.</h5>
+                    <img [src]=user_data[0].image alt="User Image" width="250" height="250" style="max-height: 300px;">
                 </div>
-                <div class="bg-light-gray padding-30px-all md-padding-25px-all sm-padding-20px-all">
+                <div class="padding-30px-all md-padding-25px-all sm-padding-20px-all"
+                    style="background-color: #2E4053;">
                     <div class="text-center">
-                        <p class="h4 margin-10px-bottom">{{user_data[0].name}}</p>
+                        <p class="h5 mb-2 p-0 margin-10px-bottom">{{user_data[0].name}}</p>
                     </div>
-                    <p class="h6 sm-margin-auto">Technology Knows
+
+
+                    <p class="sub-heading sm-margin-auto">Technology Knows
 
                         <mat-chip-list aria-label="Fish selection">
                             <mat-chip *ngFor="let data of technology">{{data}}</mat-chip>
                         </mat-chip-list>
 
                     </p>
-                    <p class="h6 sm-width-95 sm-margin-auto">Language knows
+                    <p class="mt-3 sub-heading sm-width-95 sm-margin-auto">Language knows
 
                         <mat-chip-list aria-label="Fish selection">
                             <mat-chip *ngFor="let data of languale">{{data}}</mat-chip>
@@ -28,7 +32,7 @@
                     <hr class="dashed">
                     <div class="margin-20px-top team-single-icons">
                         <ul class="">
-                            <p class="h6 ">Visit My LinkedIn
+                            <p class="sub-heading ">Visit LinkedIn
                                 <li><a [href]="user_data[0].linkedIn_url"><i class="fab fa-linkedin-in"></i></a></li>
                             </p>
                         </ul>
@@ -38,50 +42,59 @@
 
             <div class="col-lg-8 col-md-7">
                 <div class="team-single-text padding-50px-left sm-no-padding-left">
-                    <h4 class="font-size38 sm-font-size32 xs-font-size30">{{project_data.project_name}}</h4>
-                    <p class="h6 lead" style="margin-top: 50px;">Project Desctription</p>
-                    <p class="no-margin-bottom">{{project_data.project_description}}</p>
+                    <h4 class="title mt-3 font-size38 sm-font-size32 xs-font-size30">{{project_data.project_name}}</h4>
+                    <div >
+                        <p class="sub-title h6 lead mt-5 mb-0">Project Desctription</p>
+                        <p class="no-margin-bottom">{{project_data.project_description}}</p>
 
-                    <p class="h6 lead">Team Mate Desctription</p>
-                    <p class="no-margin-bottom">{{project_data.team_mate_desctiption}}</p>
-                    <div class="contact-info-section margin-40px-tb">
+                        <p class="sub-title h6 lead  mb-0">Team Mate Desctription</p>
+                        <p class="no-margin-bottom">{{project_data.team_mate_desctiption}}</p>
+
+                    </div>
+                    <div class="contact-info-section margin-40px-tb ">
+
+                        <div >
+                            <p class="sub-title h6 lead ">Expected Front-End technology</p>
+                            <p class="no-margin-bottom">
+                                <mat-chip-list aria-label="Fish selection">
+                                    <mat-chip *ngFor="let data of project_data.front_end.split(',')">{{data}}</mat-chip>
+                                </mat-chip-list>
+
+                            </p>
+
+                            <p class="sub-title h6 lead">Expected Back-End technology</p>
+                            <p class="no-margin-bottom">
+                                <mat-chip-list aria-label="Fish selection">
+                                    <mat-chip *ngFor="let data of project_data.back_end.split(',')">{{data}}</mat-chip>
+                                </mat-chip-list>
+                            </p>
+                        </div>
+                        <div style="background-color: #d3d3d356;">
+
+                            <p class="sub-title h6 lead">Current Team Member List</p>
 
 
-                        <p class="h6 lead">Expected Front-End technology</p>
-                        <p class="no-margin-bottom">
-                            <mat-chip-list aria-label="Fish selection">
-                                <mat-chip *ngFor="let data of project_data.front_end.split(',')">{{data}}</mat-chip>
-                            </mat-chip-list>
-
-                        </p>
-
-                        <p class="h6 lead">Expected Back-End technology</p>
-                        <p class="no-margin-bottom">
-                            <mat-chip-list aria-label="Fish selection">
-                                <mat-chip *ngFor="let data of project_data.back_end.split(',')">{{data}}</mat-chip>
-                            </mat-chip-list>
-                        </p>
-
-                        <p class="h6 lead">Current Team Member List</p>
-
-
-                        <div *ngIf="registered_user_list" class="no-margin-bottom">
-                            <div *ngFor="let data of  registered_user_list">
-                                <p><b>Name : </b> {{data.user_name}}
-                                    <a (click)="visitProfile(data.registered_user_id)" style="color: blue;margin-left: 10px;">(Visit Profile) </a>
-                                </p>
+                            <div *ngIf="registered_user_list" class="no-margin-bottom">
+                                <div *ngFor="let data of  registered_user_list">
+                                    <p><span style="color: #2E4053; font-weight: 400;">Name</span> : {{data.user_name}}
+                                        <a (click)="visitProfile(data.registered_user_id)"
+                                            style="color: blue;margin-left: 10px;">(Visit Profile) </a>
+                                    </p>
+                                </div>
                             </div>
-                        </div>
 
-                        <div *ngIf="registered_user_list.length==0" >
-                            <div class="alert alert-info">Currently there are no team member except the project creater.</div>
-                        </div>
-                        <p class="h6 ">Type of project</p>
-                        <p class="no-margin-bottom">{{project_data.type}}</p>
+                            <div *ngIf="registered_user_list.length==0">
+                                <div class="alert alert-info">Currently there are no team member except the project
+                                    creater.
+                                </div>
+                            </div>
+                            <p class="sub-title h6  mb-0">Type of project</p>
+                            <p class="no-margin-bottom">{{project_data.type}}</p>
 
-                        <p class="h6 ">Expected Deadline</p>
-                        <p class="no-margin-bottom">{{project_data.deadline| date:'yyyy-MM-dd'}}</p>
-                        <button (click)="openDialog()" mat-raised-button color="primary">Request To join the
+                            <p class="sub-title h6  mb-0">Expected Deadline</p>
+                            <p class="no-margin-bottom">{{project_data.deadline| date:'yyyy-MM-dd'}}</p>
+                        </div>
+                        <button class="btn" (click)="openDialog()">Request To join the
                             project</button>
                     </div>
 
