--- a/find-team-mates/src/app/register/register.component.html
+++ b/find-team-mates/src/app/register/register.component.html
@@ -8,7 +8,7 @@
           <div class="card rounded shadow shadow-sm">
             <div class="card-header">
               <h2 class="alert-primary">{{messageData}}</h2>
-              <h3 class="mb-0">Registration Form</h3>
+              <h3 class="title mb-0">Registration Form</h3>
             </div>
             <div class="card-body">
 
@@ -97,7 +97,7 @@
                   <p  class="alert alert-danger" *ngIf="!firstFormGroup.valid || !secondFormGroup.valid" >Plese complete all the required field</p>
                   <p class="alert alert-success"  *ngIf="firstFormGroup.valid && secondFormGroup.valid" >You are good to go..</p>
                   <div>
-                    <button class="btn-lg btn-block" mat-raised-button color="primary" [disabled]="!firstFormGroup.valid || !secondFormGroup.valid" (click)="submit()">Submit</button>
+                    <button class="btn btn-lg btn-block" mat-raised-button color="primary" [disabled]="!firstFormGroup.valid || !secondFormGroup.valid" (click)="submit()">Submit</button>
 
                   </div>
                 </mat-step>
