--- a/find-team-mates/src/app/update-profile/update-profile.component.html
+++ b/find-team-mates/src/app/update-profile/update-profile.component.html
@@ -1,9 +1,9 @@
 <div class="container">
-    <h1 class="text-primary"><span class="glyphicon glyphicon-user"></span>Edit Profile</h1>
+    <h1 class="title mt-3">Edit Profile</h1>
     <hr>
     <div class="row">
-        <div class="col-md-12 min-vh-100 d-flex flex-column justify-content-center">
-            <div class="row">
+        <div class="col-md-12 min-vh-100">
+            <div class="row" style="background-color:#fafafa">
                 <div class="col-lg-9 col-md-8 mx-auto">
                     <form class="form-horizontal" role="form" #userForm="ngForm">
                         <div class="form-group">
@@ -12,8 +12,8 @@
                                     style="max-height: 250px;">
                             </div>
                             <div>
-                                <button type="button" mat-button color="primary" (click)="fileInput.click()">Choose
-                                    File</button>
+                                <button type="button" mat-button color="primary" (click)="fileInput.click()">Update
+                                    Profile Picture</button>
                                 <input hidden matInput name="image" [(ngModel)]="user_data[0].image">
                                 <input hidden (change)="onFileSelected($event)" #fileInput type="file" id="file">
                             </div>
@@ -71,14 +71,14 @@
                         </div>
                         <div class="form-group">
                             <button [disabled]="userForm.form.invalid" type="submit"
-                                (click)=saveUpdatedUserInfo(userForm) class="btn btn-outline-primary">submit</button>
+                                (click)=saveUpdatedUserInfo(userForm) class="btn btn-outline-primary">Update</button>
                         </div>
 
 
                     </form>
                 </div>
-                </div>
-                </div>
             </div>
         </div>
-        <hr>
+    </div>
+</div>
+<hr>
