--- a/find-team-mates/src/app/update-project-details/update-project-details.component.html
+++ b/find-team-mates/src/app/update-project-details/update-project-details.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container  mt-3 mb-3">
     <div class="row">
       <div class="col-md-12 d-flex flex-column justify-content-center">
         <div class="row">
@@ -7,7 +7,7 @@
             <!-- form card Registration -->
             <div class="card rounded shadow shadow-sm ">
               <div class="card-header">
-                <h3 class="mb-0 text-center">Update your Project Details</h3>
+                <h3 class="mb-0 text-center title">Update your Project Details</h3>
               </div>
               <div class="card-body">
   
@@ -89,7 +89,7 @@
                   </div>
                   <div class="row">
                       <div class="col">
-                        <button class="btn-lg btn-block" (click)="onUpdateClick()" mat-raised-button color="primary" 
+                        <button class="btn btn-lg btn-block" (click)="onUpdateClick()" mat-raised-button color="primary" 
                         >Update</button>
                       </div>
                       <div class="col">
