--- a/find-team-mates/src/app/update-project/update-project.component.css
+++ b/find-team-mates/src/app/update-project/update-project.component.css
@@ -2,3 +2,41 @@ button:hover {
     outline: none;
     border: 0;
  }
+
+ .title{
+
+	font-weight: 400 ;
+	color:  #2471A3;
+	font-size: 30px;
+
+}
+
+
+.card-header{
+    font-size: 20px;
+    background-color: #2471A3;
+    color: #F7F9F9;
+}
+
+.sub-heading{
+    font-weight: 300 ;
+	color:  #2471A3;
+	font-size: 15px;
+}
+
+.btn{
+	background-color: #2E4053;
+	color: #F7F9F9;
+	text-decoration: none;
+	border: 0px;	
+}
+
+
+.btn:hover{
+	color: #f7f9f9cb;
+}
+.btn:active:focus
+{
+	border-color: #F7F9F9;
+	background-color: #2E4053;;
+}
